Search buttons style done

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <input class="search-bar" type="text">
     </div>
     <div class="search-buttons">
-        <button>Google search</button>
-        <button>I'm feeling lucky</button>
+        <button class="search-button">Google search</button>
+        <button class="search-button">I'm feeling lucky</button>
     </div>
 </body>
 </html>
