--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    <header>
+        <div class="header-left-side">
+            <a class="header-link" href="#">About</a>
+            <a class="header-link" href="#">Store</a>
+        </div>
+        <div class="header-right-side">
+            <a class="header-link" href="#">Gmail</a>
+            <a class="header-link" href="#">Image</a>
+            <a href="#"><img class="google-apps-icon" src="https://cdn.icon-icons.com/icons2/1369/PNG/512/-apps_90405.png" alt=""></a>
+            <a href="#"><img class="profile-picture" src="https://lh3.googleusercontent.com/ogw/ADGmqu9aXQDKMHHXZ6pKp8HQjUekMR3lFovfrao5ngXc=s32-c-mo" alt=""></a>
+        </div>
+    </header>
     <div class="search-block">
         <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
         <input class="search-bar" type="text">
