--- a/index.html
+++ b/index.html
@@ -28,5 +28,17 @@
         <button class="search-button">Google search</button>
         <button class="search-button">I'm feeling lucky</button>
     </div>
+    <footer>
+        <div class="footer-left-side">
+            <a class="footer-link" href="#">Advertising</a>
+            <a class="footer-link" href="#">Business</a>
+            <a class="footer-link" href="#">How Search works</a>
+        </div>
+        <div class="footer-right-side">
+            <a class="footer-link" href="#">Privacy</a>
+            <a class="footer-link" href="#">Terms</a>
+            <a class="footer-link" href="#">Settings</a>
+        </div>
+    </footer>
 </body>
 </html>
